--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -130,8 +130,8 @@
     <string name="settings_general_category">Ogólne</string>
     <string name="settings_dark_theme_title">Ciemny Motyw</string>
     <string name="settings_dark_theme_summary">Włącz ciemny motyw</string>
-    <string name="settings_clear_cache_title">Wyczyść Cache Repozytorium</string>
-    <string name="settings_clear_cache_summary">Wyczyść cache dla repozytorium, wymusza odświeżenie online przez aplikację</string>
+    <string name="settings_clear_cache_title">Wyczyść Pamięć Repozytorium</string>
+    <string name="settings_clear_cache_summary">Wymusza na aplikacji odświeżenie online repozytorium</string>
 
     <string name="settings_disable_title">Wyłącz Magisk</string>
     <string name="settings_disable_summary">Wszystko zostanie wyłączone za wyjątkiem roota (MagiskSU)</string>
@@ -151,7 +151,7 @@
     <string name="settings_su_request_60">60 sekund</string>
     <string name="superuser_access">Dostęp Superuser</string>
     <string name="auto_response">Automatyczna Odpowiedź</string>
-    <string name="request_timeout">Czas Prośby</string>
+    <string name="request_timeout">Czas na decyzję</string>
     <string name="superuser_notification">Powiadomienia Superusera</string>
     <string name="request_timeout_summary">%1$s sekund</string>
 
@@ -186,7 +186,7 @@
     <string name="su_snack_revoke">%1$s uprawnienia są odwołane</string>
     <string name="su_revoke_title">Odwołać?</string>
     <string name="su_revoke_msg">Potwierdzasz odwołanie uprawnień %1$s?</string>
-    <string name="toast">Toast</string>
+    <string name="toast">Powiadomienie</string>
     <string name="none">Brak</string>
 
     <!--Superuser logs-->
