Update strings - pl - last changes

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -90,6 +90,7 @@
     <string name="permissionNotGranted">Ta funkcja nie będzie działać bez uprawnień do zapisu na pamięci zewnętrznej.</string>
     <string name="no_thanks">Nie dziękuję</string>
     <string name="yes">Tak</string>
+	<string name="ok">OK</string>
     <string name="repo_install_title">Zainstaluj %1$s</string>
     <string name="repo_install_msg">Czy chcesz zainstalować  %1$s ?</string>
     <string name="download_install">Pobierz i zainstaluj</string>
@@ -120,11 +121,8 @@
     <string name="no_magisksu_title">Nie Używaj MagiskSU!</string>
     <string name="no_magisksu_msg">Jeśli nie masz roota z MagiskSU, używanie samego MagiskHide może nie wystarczyć! Inne metody nie są oficjalnie obsługiwane. Do poprawnego działania SaftyNet potrzebne będą dodatkowe narzędzia (np suhide)</string>
     <string name="understand">Rozumiem</string>
-    
-	<!--URL Templates-->
-    
-    
-    
+    <string name="process_error">Błąd procesu</string>
+    <string name="internal_storage">Zip jest przechowywany w:\n[Pamięć Wewnętrzna]%1$s</string>
     
     <!--Settings Activity -->
     <string name="settings_general_category">Ogólne</string>
