--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -64,6 +64,7 @@
     <string name="update_available">Aktualizacja jest dostępna</string>
     <string name="installed">Zainstalowany</string>
     <string name="not_installed">Nie zainstalowany</string>
+    <string name="changelog">Zmiany</string>
 
     <!--Log Fragment-->
     <string name="menuSaveToSd">Zapisz na SD</string>
@@ -89,12 +90,15 @@
     <string name="permissionNotGranted">Ta funkcja nie będzie działać bez uprawnień do zapisu na pamięci zewnętrznej.</string>
     <string name="no_thanks">Nie dziękuję</string>
     <string name="yes">Tak</string>
+	<string name="ok">OK</string>
     <string name="repo_install_title">Zainstaluj %1$s</string>
     <string name="repo_install_msg">Czy chcesz zainstalować  %1$s ?</string>
     <string name="download_install">Pobierz i zainstaluj</string>
     <string name="goto_install">Idź do sekcji \"Instalacja\"</string>
     <string name="download_file_error">Błąd pobierania pliku</string>
     <string name="install_error">Błąd instalacji!</string>
+    <string name="manual_install_1">Plik zip umieszczony w %1$s</string>
+    <string name="manual_install_2">Zainstaluj go ręcznie w recovery</string>
     <string name="invalid_zip">Ten zip nie jest Modułem Magisk!!</string>
     <string name="reboot_title">Instalacja zakończona powodzeniem!</string>
     <string name="reboot_msg">Czy chcesz teraz ponownie uruchomić?</string>
@@ -110,18 +114,15 @@
     <string name="magisk_update_title">Nowa Wersja Magisk Dostępna!</string>
     <string name="magisk_update_message">Magisk v%1$.1f jest dostępny, chcesz zainstalować?</string>
     <string name="settings_reboot_toast">Uruchom ponownie, aby zastosować ustawienia</string>
-    <string name="release_notes">Zmiany</string>
+    <string name="check_release_notes">Sprawdź zmiany</string>
     <string name="repo_cache_cleared">Cache repozytorium wyczyszczone</string>
     <string name="safetyNet_hide_notice">Ta aplikacja wykorzystuje SafetyNet\nJest już domyślnie obsługiwana przez MagiskHide</string>
     <string name="start_magiskhide">Uruchamianie MagiskHide …</string>
     <string name="no_magisksu_title">Nie Używaj MagiskSU!</string>
     <string name="no_magisksu_msg">Jeśli nie masz roota z MagiskSU, używanie samego MagiskHide może nie wystarczyć! Inne metody nie są oficjalnie obsługiwane. Do poprawnego działania SaftyNet potrzebne będą dodatkowe narzędzia (np suhide)</string>
     <string name="understand">Rozumiem</string>
-    
-	<!--URL Templates-->
-    
-    
-    
+    <string name="process_error">Błąd procesu</string>
+    <string name="internal_storage">Zip jest przechowywany w:\n[Pamięć Wewnętrzna]%1$s</string>
     
     <!--Settings Activity -->
     <string name="settings_general_category">Ogólne</string>
